fix: fix gap between projects

--- a/style.css
+++ b/style.css
@@ -337,11 +337,12 @@ mark {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-right: 1.25rem;
+  justify-content: center;
+  gap: 0.7rem;
 }
 
 .projects-item {
   margin-top: 1.25rem;
-  margin-right: 1.25rem;
   list-style: none;
 }
 
